[package]
name = "random-detached"
version = "1.0.0"
authors = ["448-OG <superuser@448.africa>"]
description = "A random byte and char generator that doesn't keep breaking because different crates use different versions of rand"
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
categories = ["data-structures"]

[features]
default = ["random_bytes"]

random_bytes = []
chars = ["dep:rand_chacha"]

blake3_hash = ["blake3"]
const_cmp = ["dep:subtle"]

[dependencies]
getrandom = { version = "=0.4.3" }
zeroize = "=1.9.0"
blake3 = { version = "=1.8.5", default-features = false, optional = true }
subtle = { version = "=2.6.1", default-features = false, features = ["const-generics"], optional = true }
rand_chacha = {version = "=0.10.0", optional = true}
