[package]
name = "random-detached"
version = "1.2.0"
authors = ["448-OG <superuser@448.africa>"]
description = "A random byte and char generator that doesn't keep breaking because different crates use different versions of rand"
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"
categories = ["data-structures"]
homepage = "https://github.com/448-OG/random-detached"
repository = "https://github.com/448-OG/random-detached.git"

[dependencies]
blake3 = { version = "=1.8.5", default-features = false, optional = true }
getrandom = { version = "=0.4.3" }
rand_chacha = { version = "=0.10.0", optional = true }
subtle = {
  version = "=2.6.1",
  default-features = false,
  features = ["const-generics"],
  optional = true
}
zeroize = "=1.9.0"

[features]
default = ["random_bytes"]

chars = ["dep:rand_chacha"]
random_bytes = []

blake3_hash = ["dep:blake3"]
const_cmp = ["dep:subtle"]
